Fixes dark mode color issues

--- a/src/styles/Default.scss
+++ b/src/styles/Default.scss
@@ -39,7 +39,7 @@
   .logo {
     height: 32px;
     margin: 16px 16px 30px 16px;
-    color: white;
+    color: #fff;
     font-weight: bold;
     font-size: x-large;
     text-align: center;
